panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__preprocessor__test_function_like_macro_with_parameters_and_empty_body.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/preprocessor/test_function_like_macro_with_parameters_and_empty_body.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_function_like_macro_with_parameters_and_empty_body.c"
   (function-definition external stack-size=8
      (main~0 `fn() -> int` (static main))
      (compound-statement
         (expression ∅))))

----- stderr -----
