panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__preprocessor__test_hash_digraph.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/preprocessor/test_hash_digraph.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_hash_digraph.c"
   (declaration external (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)) ∅)
   (function-definition external stack-size=40
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (expression
            (call `int` @0
               (addressof `ptr<fn(∅: ptr<char const>) -> int>` @8
                  (puts~0 `fn(∅: ptr<char const>) -> int` (static puts)))
               (noop-type-conversion `ptr<char const>` @16
                  (noop-type-conversion `ptr<char>` @16
                     (addressof `ptr<array<char; 9>>` @16
                        (string `array<char; 9>` @void "it-works\0")))))))))

----- stderr -----
